@@ -1,3 +1,9 @@
+2003/12/04 13:07 (-0500) rwmcfa1
+
+	* GenPod.pm: @ARGV is now searched for disable-apidoc which, surprise,
+	disables the generation of the api doc pods thus speeding up the build
+	process.
+
 2003/12/04 00:12 (-0500) muppetman
 
 	* Glib.pm: credit where credit is due
